@@ -1,3 +1,8 @@
+2013-04-17  Adam Conrad  <adconrad@0c3.net>
+
+	* sysdeps/unix/sysv/linux/sys/fsuid.h: Remove __wur from setfsuid
+	and setfsgid.
+
 2013-04-17  Carlos O'Donell  <carlos@redhat.com>
 
 	* configure.in: Remove i386 configure warning. Remove i386 case.
